--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "react-icons": "^4.4.0"
   }
 }
